mType/tests/testFiles/typeChecking/error/functionReturnTypeMismatchBoolToString.mt
function getBool(): bool {
    return true;
}

string wrongString = getBool();  // Should fail